# xfce4-session

./: .cppcheck-false-positives  .cppcheck.cfg  .cvsignore  .gitignore  .scan-build-false-positives  AUTHORS  BUGS  COPYING  ChangeLog  ChangeLog.pre-xfce-devel  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  configure.in.in  ltmain.sh  meson.build  meson_options.txt  module.xml  xfce-wayland.desktop.in  xfce.desktop.in  xfce4-session.rc  xfce4-session.spec  xfce4-session.spec.in
defaults/: Makefile.am  Makefile.in  default.session  shutdown.allow  xinitrc.xfce4-session
defaults/splash/: Makefile.am  Makefile.in  splash.theme
doc/: FAQ  Makefile.am  NEWS.pre-4.3  README.Kiosk
doc/C/: Makefile.am  xfce4-session.html  xfce4-session.xml
doc/fr/: xfce4-session.html  xfce4-session.xml
doc/he/: Makefile.am  xfce4-session.html  xfce4-session.xml
doc/he/images/: Makefile.am
doc/manual/: Makefile.am  xfce4-session-html.xsl  xfce4-session.xml
doc/manual/images/: Makefile.am
doc/manual/images/el/: Makefile.am
doc/manual/po/: da.po  el.po  es.po  fr.po  gl.po  hr.po  it.po  ja.po  pt_BR.po  ru.po  sv.po  tr.po  ug.po  uk.po  xfce4-session.pot  zh_CN.po
docs/: FAQ  Makefile.am  Makefile.in  README.Kiosk  SessionFileFormat.txt  SplashThemes.txt  xfce-nochunk.xsl
docs/C/: Makefile.am  Makefile.in  xfce4-session.html  xfce4-session.xml
docs/C/images/: Makefile.am  Makefile.in
docs/fr/: Makefile.am  Makefile.in  xfce4-session.html
docs/fr/images/: Makefile.am  Makefile.in
engines/: Makefile.am  Makefile.in
engines/balou/: .cvsignore  Makefile.am  Makefile.in  TODO  balou-theme.c  balou-theme.h  balou.c  balou.h  config.c  engine.c  gnome-uri.c  gnome-uri.h
engines/balou/scripts/: Makefile.am  Makefile.in  balou-export-theme  balou-install-theme
engines/balou/themes/: Makefile.in
engines/balou/themes/Default/: Makefile.am  Makefile.in  themerc
engines/mice/: .cvsignore  Makefile.am  Makefile.in  generate.c  mice.c  preview.h  slide.h
engines/simple/: .cvsignore  Makefile.am  Makefile.in  fallback.h  preview.h  simple.c
icons/: Makefile.am  Makefile.in  meson.build
icons/128x128/: Makefile.am  Makefile.in
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/24x24-actions/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am  Makefile.in
icons/48x48-actions/: Makefile.am
icons/64x64/: Makefile.am  Makefile.in
icons/72x72/: Makefile.am  Makefile.in
icons/96x96/: Makefile.am
icons/96x96-actions/: Makefile.am
icons/scalable/: Makefile.am  Makefile.in
labwc/: Makefile.am  labwc-environment  labwc-rc.xml  meson.build
libxfsm/: .cvsignore  Makefile.am  Makefile.in  meson.build  xfce4-session-1.0.pc.in  xfce4-session-2.0.pc.in  xfsm-shutdown-common.h  xfsm-splash-engine.h  xfsm-splash-rc.c  xfsm-splash-rc.h  xfsm-util.c  xfsm-util.h
panel-plugin/: Makefile.am  xfsm-logout-plugin-4.6.desktop.in.in  xfsm-logout-plugin-ui.xml  xfsm-logout-plugin.c  xfsm-logout-plugin.desktop.in  xfsm-logout-plugin.desktop.in.in
po/: .cvsignore  ChangeLog  LINGUAS  POTFILES  POTFILES.in  POTFILES.skip  af.po  am.po  ar.gmo  ar.po  ast.po  az.gmo  az.po  az_AZ.po  be.gmo  be.po  be@tarask.po  bg.po  bn.po  bn_IN.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  dz.po  el.gmo  el.po  el_GR.gmo  el_GR.po  en_AU.po  en_CA.po  en_GB.gmo  en_GB.po  eo.po  es.gmo  es.po  (+97 more)
scripts/: Makefile.am  meson.build  startxfce4.in  xflock4  xinitrc.in  xinitrc.in.in  xscreensaver.desktop.in
settings/: .cvsignore  Makefile.am  Makefile.in  gnome-kde-logo.h  looknfeel.c  looknfeel.h  main.c  meson.build  module.c  module.h  nopreview.h  session-editor.c  session-icon.h  session.c  settings.h  splash-settings.c  startup-settings.c  xfae-dialog.c  xfae-dialog.h  xfae-model.c  xfae-model.h  xfae-window.c  xfae-window.h  xfce-session-settings.desktop  xfce-session-settings.desktop.in  xfce4-session-marshal.list  xfce4-session-settings-common.h  xfce4-session-settings.glade  xfce4-session-settings.ui  xfce4-session.gresource.xml  xfce4-session.xml  xfsm-install-theme
settings/scripts/: Makefile.am  Makefile.in  xfsm-export-theme  xfsm-install-theme
settings/session/: .cvsignore  Makefile.am  Makefile.in  session.c  xfce-session-settings.desktop  xfce-session-settings.desktop.in
settings/splash/: .cvsignore  Makefile.am  Makefile.in  module.c  module.h  nopreview.h  splash.c  xfce-splash-settings.desktop  xfce-splash-settings.desktop.in
themes/: Makefile.in
themes/Default/: Makefile.am  Makefile.in  themerc
xfce4-autostart-editor/: Makefile.am  main.c  xfae-dialog.c  xfae-model.c  xfae-model.h  xfae-window.c  xfae-window.h  xfce4-autostart-editor.desktop.in
xfce4-session/: .cvsignore  Makefile.am  Makefile.in  chooser-icon.h  client-list.c  client-list.h  client.c  client.h  ice-layer.c  ice-layer.h  main.c  manager.c  manager.h  meson.build  org.xfce.session.policy.in.in  session-control.c  session-control.h  shutdown.c  shutdown.h  sm-layer.c  sm-layer.h  splash-fallback.h  splash-screen.c  splash-screen.h  startup.c  startup.h  tray-icon.c  tray-icon.h  util.c  util.h  xfce-portals.conf  xfce-screensaver.c  xfce4-session-1.0.pc.in  xfce4-session.1  xfce_trayicon.c  xfce_trayicon.h  xfsm-chooser-trash.c  xfsm-chooser-trash.h  xfsm-chooser.c  xfsm-chooser.h  (+62 more)
xfce4-session-logout/: .cvsignore  Makefile.am  Makefile.in  main.c  meson.build  xfce4-session-logout.1  xfce4-session-logout.desktop.in
xfce4-shutdown/: .cvsignore  Makefile.am  Makefile.in  main.c  xfce4-shutdown.1
xfce4-tips/: Makefile.am  main.c  xfce4-tips-autostart.desktop.in
xfce4-tips/data/: Makefile.am  tips
xfsm-shutdown-helper/: .cvsignore  Makefile.am  Makefile.in  main.c  meson.build
